--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
 			<version>8.0.12</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-email</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
